Issue 840 - word wrap

--- a/app/app/styles/_item.scss
+++ b/app/app/styles/_item.scss
@@ -31,6 +31,7 @@ $imageSize: 80px;
         };
         text-shadow: 0px 0px 1px gray;
         color: #383838;
+        word-wrap: break-word;
     }
     .user-info {
         background-color: white;
